tests/ui/parse_function_is_not_path.stderr
error: `parse` argument must be a function path
  --> $DIR/parse_function_is_not_path.rs:14:29
   |
14 |     #[clap(parse(from_str = "2"))]
   |                             ^^^
